--- a/src/scss/_about-me.scss
+++ b/src/scss/_about-me.scss
@@ -13,7 +13,11 @@
         justify-content: space-between;
         align-items: center;
         margin-bottom: 50px;
-        margin-top: 50px;
+        margin-top: 150px;
+        h2 {
+            color: white;
+            font-size: 40px;
+        }
         div {
             display: flex;
             flex-direction: column;
@@ -28,12 +32,16 @@
             width: auto;
             margin: 50px;
 
+
+
             p {
                 line-height: 30px;
                 text-align: center;
                 width: auto;
                 max-width: 600px;
                 margin: 0;
+                color: white;
+                font-size: 17px;
             }
         }
 
@@ -51,7 +59,7 @@
 @media (min-width: 768px) {
     #about-me-container {
         #about-me {
-            margin-top: 50px;
+            margin-top: 150px;
             div {
                 gap: 40px;
             }
@@ -65,7 +73,6 @@
 @media (min-width: 992px) {
     #about-me-container {
         #about-me {
-
             div {
                 flex-direction: row;
             }
