--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -12,6 +12,11 @@
         width: 84%;
         gap: 30px;
 
+        h2 {
+            color: white;
+            font-size: 40px;
+        }
+
         #social-links-container {
             display: flex;
             flex-direction: column;
@@ -20,10 +25,10 @@
             max-width: 500px;
             height: auto;
             padding: 30px;
-            box-shadow: 0px 0px 20px -10px rgba(0,0,0,0.44);
+            box-shadow: 0px 0px 30px -10px #f8a218;
             margin-bottom: 50px;
             border-radius: 50px;
-            background-color: rgba(255, 255, 255, 0.823);
+            background-color: white;
 
             #social-links {
                 display: flex;
