--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -2,15 +2,16 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 92vh;
+    height: 100vh;
     justify-content: center;
     align-items: center;
+    margin-bottom: -150px;
 
     #desc {
         display: flex;
         flex-direction: column;
         width: 84%;
-        align-items: start;
+        align-items: center;
         gap: 2px;
 
         p {
@@ -26,7 +27,10 @@
         }
     }
 
-    button {
+    a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         border: none;
         background-color: black;
         color: white;
@@ -34,12 +38,18 @@
         width: 120px;
         margin-top: 15px;
         border-radius: 10px;
+        cursor: pointer;
+        text-decoration: none;
 
         &:hover {
-            transform: translateX(15px);
+            transform: translateY(15px);
             transition: transform 0.5s ease-out;
-            background-color: white;
+            box-shadow: 0px 0px 30px -10px #f8a218;
+            border: 4px solid black;
+            background-color:#f8a218;
             color: black;
+            font-weight: 400;
+            transform: scale(1.14);
         }
     }
 }
