--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,18 +1,30 @@
 #nav-bar {
     background-color: rgb(255, 255, 255);
-    position: sticky;
-    top: 0;
     transition-delay: 3s;
     min-height: 70px;
-    border-bottom: 0.5px solid black;
-}
-@media (min-width: 992px) {
-
+    border-bottom: 2px solid #f8a218;
     #basic-navbar-nav {
         #sections {
+            margin-top: 20px;
+            gap: 15px;
+            a {
+                padding: 0;
+                width: fit-content;
+            }
+        }
+    }
+}
+@media (min-width: 992px) {
+#nav-bar {
+    #basic-navbar-nav {
+        #sections {
+            margin-top: 0;
+            gap: 20px;
             width: 100%;
             display: flex;
             justify-content: flex-end;
         }
     }
+}
+
 }
