--- a/src/scss/_works.scss
+++ b/src/scss/_works.scss
@@ -16,6 +16,8 @@
 
         h2 {
             margin-bottom: 50px;
+            color: white;
+            font-size: 40px;
         }
 
         #work-dashboard {
@@ -37,6 +39,7 @@
                         height: auto;
                         border-radius: 10px;
                         object-fit: contain;
+                        box-shadow: 0px 0px 20px -10px #f8a218;
                     }
                 }
 
@@ -48,9 +51,11 @@
                     h4 {
                         font-style: italic;
                         text-align: center;
+                        color: white;
                     }
                     p {
                         margin: 0;
+                        color: white;
                     }
                     div {
                         margin-top: 10px;
@@ -60,6 +65,7 @@
                         img {
                             height: 25px;
                             width: 25px;
+
                         }
                     }
                 }
