--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -1,3 +1,24 @@
+@keyframes button {
+    15% {
+        rotate: (10deg);
+    }
+    30% {
+        rotate: (-10deg);
+    }
+    45% {
+        rotate: (5deg);
+    }
+    60% {
+        rotate: (-5deg);
+    }
+    75% {
+        rotate: (2deg);
+    }
+    90% {
+        rotate: (-2deg);
+    }
+}
+
 #container-hero {
     display: flex;
     flex-direction: column;
@@ -12,7 +33,10 @@
         flex-direction: column;
         width: 84%;
         align-items: center;
+        justify-content: center;
         gap: 2px;
+        text-align: center;
+        margin-top: 50px;
 
         p {
             font-size: 40px;
@@ -24,6 +48,9 @@
             text-transform: uppercase;
             font-weight: 900;
             font-size: 50px;
+            background: linear-gradient(to right, rgb(239, 125, 4), #f8a520,);
+            background-clip: text;
+            -webkit-text-fill-color: transparent; 
         }
     }
 
@@ -32,24 +59,19 @@
         justify-content: center;
         align-items: center;
         border: none;
-        background-color: black;
+        background-color:#f8a218;
         color: white;
-        height: 40px;
-        width: 120px;
+        height: 50px;
+        width: 140px;
         margin-top: 15px;
         border-radius: 10px;
         cursor: pointer;
         text-decoration: none;
+        font-weight: 600;
+        outline: none;
 
         &:hover {
-            transform: translateY(15px);
-            transition: transform 0.5s ease-out;
-            box-shadow: 0px 0px 30px -10px #f8a218;
-            border: 4px solid black;
-            background-color:#f8a218;
-            color: black;
-            font-weight: 400;
-            transform: scale(1.14);
+            animation: button 2s;
         }
     }
 }
