--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,30 +1,57 @@
 #nav-bar {
-    background-color: rgb(255, 255, 255);
+    background-color:#101628;
     transition-delay: 3s;
     min-height: 70px;
     border-bottom: 2px solid #f8a218;
-    #basic-navbar-nav {
-        #sections {
-            margin-top: 20px;
-            gap: 15px;
-            a {
-                padding: 0;
-                width: fit-content;
+    #container {
+        display: flex;
+        align-items: center;
+        padding: 7px 20px;
+        #logo {
+            color: white;
+            font-weight: 600;
+            letter-spacing: 0.5px;
+        }
+        #nav-btn {
+            background-color: white;
+        }
+        #basic-navbar-nav {
+            #sections {
+                margin-top: 20px;
+                gap: 15px;
+                padding: 10px 0px;
+                a {
+                    padding: 0;
+                    width: fit-content;
+                    color: white;
+                    height: 25px;
+
+                    &:hover {
+                        border-bottom: 1px solid white;
+                    }
+                }
             }
         }
     }
+
 }
+
 @media (min-width: 992px) {
 #nav-bar {
-    #basic-navbar-nav {
-        #sections {
-            margin-top: 0;
-            gap: 20px;
-            width: 100%;
-            display: flex;
-            justify-content: flex-end;
+    #container {
+        padding: 7px;
+        max-width: 1000px;
+        #basic-navbar-nav {
+            #sections {
+                margin-top: 0;
+                gap: 20px;
+                width: 100%;
+                display: flex;
+                justify-content: flex-end;
+            }
         }
     }
+
 }
 
 }
