--- a/src/scss/_works.scss
+++ b/src/scss/_works.scss
@@ -18,6 +18,7 @@
             margin-bottom: 50px;
             color: white;
             font-size: 40px;
+            text-align: center;
         }
 
         #work-dashboard {
@@ -40,6 +41,9 @@
                         border-radius: 10px;
                         object-fit: contain;
                         box-shadow: 0px 0px 20px -10px #f8a218;
+                        &:hover {
+                            opacity: .8;
+                        }
                     }
                 }
 
